# pico-dvi-rs

./: .gitattributes  Cargo.toml  LICENSE  memory.x  rust-toolchain.toml
.cargo/: config.toml
crates/rp2040-bsp/: Cargo.toml
crates/rp2040-bsp/src/: lib.rs
examples/: adafruit-feather-rp2040.rs  rp-pico.rs
src/: clock.rs  console.rs  demo.rs  demo2.rs  dvi.rs  dvi_differential.pio  framebuffer.rs  lib.rs  link.rs  main.rs  perf.rs  pre_init.asm  render.asm  render.rs  scan.asm  scanlist.rs
src/demo/: conway.rs  universe.txt
src/dvi/: data_island.rs  dma.rs  encode.rs  pinout.rs  serializer.rs  timing.rs  tmds.rs
src/pio_usb/: mod.rs  usb_rx.pio  usb_tx.pio  usb_tx_golf.pio  usb_tx_orig.pio
src/render/: font.rs  palette.rs  queue.rs  renderlist.rs  swapcell.rs
tools/: vcocalc.py
