[package]
name = "pico-dvi-rs"

authors     = ["Raph Levien <raph.levien@gmail.com>", "Zachary Kohnen <me@dusterthefirst.com>"]
description = "Bit-banged DVI video output on the Raspberry Pi Pico"
license     = "BSD-3-Clause"
repository  = "https://github.com/DusterTheFirst/pico-dvi-rs"

edition  = "2021"
resolver = "2"

publish = false
version = "0.0.0"

[features]
audio = []

[dependencies]
cortex-m       = "0.7.2"
cortex-m-rt    = "0.7"
embedded-alloc = "0.5"
embedded-hal   = "1.0.0"

defmt       = "0.3.2"
defmt-rtt   = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

fugit    = { version = "0.3.6", features = ["defmt"] }
#pio      = "0.2.1"
#pio-proc = "0.2.1"
rp235x-hal = { version = "0.3.0", features = ["binary-info", "critical-section-impl", "rt", "defmt"] }

rtic = { version = "2.1", features = ["thumbv8main-backend"] }
rtic-monotonics = { version = "2.0.2", features = ["rp235x"] }
futures-util = { version = "0.3", default-features = false }

[dependencies.cotton-usb-host]
git = "https://github.com/pdh11/cotton"
branch = "pdh-rp2350"
default-features = false
features = [ "rp235x" ]

[patch.crates-io]
rp235x-pac = { git = "https://github.com/jannic-dev-forks/rp235x-pac", rev = "fa7fc1f", version = "0.1", optional = true }

# TODO: use for bitfield
# bilge = "0.1.5"

[dev-dependencies]
defmt-test = "0.3.0"

# cargo build/run
[profile.dev]
codegen-units    = 1
debug            = 2
debug-assertions = true
incremental      = false
opt-level        = 3
overflow-checks  = true

# cargo build/run --release
[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 3
overflow-checks  = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units    = 8
debug            = false
debug-assertions = false
inherits         = "release"
opt-level        = 0
overflow-checks  = false

[profile.release.build-override]
codegen-units    = 8
debug            = false
debug-assertions = false
opt-level        = 0
overflow-checks  = false
